[gd_scene format=3 uid="uid://b5wjfgnu0rrdt"]

[ext_resource type="Script" uid="uid://1ig8y86te4l8" path="res://scripts/UI/main_menu.gd" id="1_qwnig"]
[ext_resource type="PackedScene" uid="uid://cp3b1eyikepf0" path="res://scenes/levels/battle_arena.tscn" id="2_5jstl"]
[ext_resource type="PackedScene" uid="uid://dqvjp1oslocn4" path="res://test/movement_demo_active_development.tscn" id="3_tfcbk"]
[ext_resource type="Texture2D" uid="uid://bcnprxj65kvtq" path="res://assets/UI/Main Menu Picture.png" id="4_tfcbk"]

[node name="MainMenu" type="Control" unique_id=895467260]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwnig")
combat_level_scene = ExtResource("2_5jstl")
movement_level_scene = ExtResource("3_tfcbk")

[node name="MainMenuPicture" type="Sprite2D" parent="." unique_id=1399620505]
position = Vector2(959, 537)
texture = ExtResource("4_tfcbk")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=330363055]
layout_mode = 0
offset_left = 793.0
offset_top = 566.0
offset_right = 1125.0
offset_bottom = 926.0

[node name="MovementDemo" type="Button" parent="VBoxContainer" unique_id=1865436103]
layout_mode = 2
size_flags_vertical = 3
text = "MOVEMENT DEMO"

[node name="CombatDemo" type="Button" parent="VBoxContainer" unique_id=1982631800]
layout_mode = 2
size_flags_vertical = 3
text = "COMBAT DEMO"

[node name="Quit" type="Button" parent="VBoxContainer" unique_id=14694399]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/MovementDemo" to="." method="_on_movement_demo_pressed"]
[connection signal="pressed" from="VBoxContainer/CombatDemo" to="." method="_on_combat_demo_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
